classDiagram
    class JobStatus {
        <<enum>>
        PENDING
        RUNNING
        COMPLETED
        FAILED
    }

    class GenerationOptions {
        +bool create_branch
        +bool github_pages
        +bool no_cache
        +Optional~str~ custom_output
    }

    class LLMConfig {
        +str main_model
        +str cluster_model
        +str base_url
    }

    class JobStatistics {
        +int total_files_analyzed
        +int leaf_nodes
        +int max_depth
        +int total_tokens_used
    }

    class DocumentationJob {
        +str job_id
        +str repository_path
        +str repository_name
        +str output_directory
        +str commit_hash
        +Optional~str~ branch_name
        +str timestamp_start
        +Optional~str~ timestamp_end
        +JobStatus status
        +Optional~str~ error_message
        +List~str~ files_generated
        +int module_count
        +GenerationOptions generation_options
        +Optional~LLMConfig~ llm_config
        +JobStatistics statistics
        +start()
        +complete()
        +fail(error_message)
        +to_dict() Dict
        +to_json() str
        +from_dict(data) DocumentationJob
    }

    DocumentationJob "1" *-- "1" GenerationOptions : composes
    DocumentationJob "1" *-- "0..1" LLMConfig : composes
    DocumentationJob "1" *-- "1" JobStatistics : composes
    DocumentationJob "1" --> "1" JobStatus : has
